# advanced_mcp_server_from_scratch

./: .env  .gitignore  README.md  database.py  frontend_api.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
frontend/src/app/: page.tsx
